--- a/index.html
+++ b/index.html
@@ -27,13 +27,45 @@
                         excepturi, sint vero at odio aliquam! Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Animi explicabo ea eveniet esse ullam aliquam</p>
                 </div>
+                <div class="header-btn">
+                    <a class="dfault-btn" href="#">Hire Me</a>
+                </div>
             </div>
             <div class="half-width header-right">
                 <div class="dev-img">
                     <img src="images/fahim_1.png" alt="">
                 </div>
             </div>
+    </section>
+    </div>
+    <!-------Dream Big Section------->
+    <section class="dream-big">
+        <div class="container">
+            <div class="half-width dream-big-left">
+                <div class="dev-img">
+                    <img src="images/fahim_2.png" alt="">
+                </div>
+            </div>
+            <div class="half-width dream-big-right">
+                <div class="dream-big-title">
+                    <h1>Dream Big</h1>
+                    <h3>Become a web developer</h3>
+                </div>
+                <div class="dream-big-detiles">
+                    <div class="detiles">
+                        <p>I already learned the basic HTML and CSS. I can build any simple website. I can even
+                            teach my
+                            grandma how to make simple website. My goal is to build 3 websites and learn advanced
+                            topics.</p>
+                    </div>
+                    <div class="header-btn">
+                        <a class="dfault-btn" href="#">Dawnload My Resume</a>
+                    </div>
+                </div>
+
+            </div>
         </div>
+    </section>
 </body>
 
 </html>
