button css solved

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         Animi explicabo ea eveniet esse ullam aliquam</p>
                 </div>
                 <div class="header-btn">
-                    <a class="dfault-btn" href="#">Hire Me</a>
+                    <a class="default-btn" href="#">Hire Me</a>
                 </div>
             </div>
             <div class="half-width header-right">
@@ -59,7 +59,7 @@
                             topics.</p>
                     </div>
                     <div class="header-btn">
-                        <a class="dfault-btn" href="#">Dawnload My Resume</a>
+                        <a class="default-btn" href="#">Dawnload My Resume</a>
                     </div>
                 </div>
 
